[package]
name = "printhor-hwi_mks_robin_nano_v3_1"
version = "0.0.0"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for MKS Robin Nano v3.1 board"
readme = "README.md"
repository = "https://github.com/printhor"
keywords = ["hardware", "abstraction"]
license = "MIT"
#documentation = "https://docs.rs/[TBD]"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
# Hardware device features
with-usbserial = ["embassy-usb"]
with-printjob = []
with-uart-port-1 = []
with-spi = ["embedded-hal"]
with-hotend = ["embedded-hal"]
with-hotbed = ["embedded-hal"]
with-motion = []
with-probe = ["embedded-hal"]
with-endstops = []
with-sdcard = []
with-fan0 = ["embedded-hal"]
with-fan1 = ["embedded-hal"]
with-laser = ["embedded-hal"]
with-defmt = []
with-trinamic = []
sdcard-uses-spi = []
ili9341_parallel = []
ili9341_spi = ["with-spi"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
alloc-cortex-m = { version = "0.4.4", default-features = false, features = []}
embassy-stm32 = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = ["stm32f407ve", "nightly", "rt", "unstable-traits", "memory-x", "exti", "unstable-pac", "time-driver-tim4"] }
embassy-executor = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = ["nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = [] }
embassy-time = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = ["tick-hz-100_000"] }
embassy-futures = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = [] }
defmt = {version = "0.3.4"}

embedded-hal = { version = "0.2.7", default-features = false, optional = true }
embassy-usb = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = [], optional = true }

printhor-hwa-common = { version = "*", path= "../../printhor-hwa-common" }
async-gcode = {version = "*", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"], git="https://github.com/cbruiz/async-gcode.git", branch= "feature/embedded-productivization" }
futures = { version = "0.3.17", default-features = false, features = [] }