[package]
name = "printhor-hwi_mks_robin_nano_v3_1"
version = "0.0.1"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for MKS Robin Nano v3.1 board"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstraction"]
license = "MIT"
documentation = "https://docs.rs/prinThor"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
# Hardware device features
with-usbserial = ["embassy-usb"]
with-printjob = []
with-uart-port-1 = []
with-spi = ["embedded-hal"]
with-hotend = ["embedded-hal"]
with-hotbed = ["embedded-hal"]
with-motion = []
with-probe = ["embedded-hal"]
with-endstops = []
with-sdcard = []
with-fan-layer-fan1 = ["embedded-hal"]
with-laser = ["embedded-hal"]
with-defmt = []
with-trinamic = []
sdcard-uses-spi = []
ili9341_parallel = []
ili9341_spi = ["with-spi"]

[dependencies]
defmt = {version = "0.3"}
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
alloc-cortex-m = { version = "0.4.4", default-features = false, features = []}

embassy-stm32 = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = ["stm32f407ve", "rt", "memory-x", "exti", "unstable-pac", "time-driver-tim4"] }
#embassy-stm32 = { version = "*", default-features = false, path="../../../embassy/embassy-stm32", features = ["stm32f407ve", "defmt", "rt", "memory-x", "exti", "unstable-pac", "time-driver-tim4"] }
embassy-executor = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = ["nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
#embassy-executor = { version = "*", default-features = false, path = "../../../embassy/embassy-executor", features = ["nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = [] }
#embassy-sync = { version = "*", path = "../../../embassy/embassy-sync", features = [] }
embassy-time = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = ["tick-hz-100_000"] }
#embassy-time = { version = "*", path = "../../../embassy/embassy-time", features = ["tick-hz-100_000"] }
embassy-futures = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = [] }
#embassy-futures = { version = "*", path = "../../../embassy/embassy-futures", features = [] }
embassy-usb = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e", features = [], optional = true }
#embassy-usb = { version = "*", path = "../../../embassy/embassy-usb", features = [], optional = true }

printhor-hwa-common = { version = "*", path= "../../printhor-hwa-common" }
async-gcode = {version = "*", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"], git="https://github.com/cbruiz/async-gcode.git", branch= "feature/embedded-productivization" }
futures = { version = "0.3.29", default-features = false, features = [] }
embedded-hal = { version = "0.2.7", default-features = false, optional = true }