[package]
name = "printhor-hwi_native"
version = "0.0.4"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction native std for debugging/playgrounding/analysis"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstration", "library", "printhor"]
license = "MIT"
documentation = "https://docs.rs/printhor-hwi_native"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
default = []
# Hardware device features
with-log = ["env_logger"]
with-serial-usb = ["async-std"]
with-serial-port-1 = ["async-std"]
with-serial-port-2 = ["async-std"]
with-print-job = []
with-hot-end = ["embedded-hal-1", "printhor-hwa-common/with-hot-end"]
with-hot-bed = ["embedded-hal-1", "printhor-hwa-common/with-hot-bed"]
with-motion = ["printhor-hwa-common/with-motion"]
with-motion-stepper = []
with-motion-cartessian-kinematics = []
with-motion-anthropomorphic-kinematics = ["printhor-hwa-common/with-motion-anthropomorphic-kinematics"]
with-motion-delta-kinematics = ["printhor-hwa-common/with-motion-delta-kinematics"]
with-motion-broadcast = ["printhor-hwa-common/with-motion-broadcast"]
with-probe = ["embedded-hal-0"]
with-endstops = []
with-sd-card = ["embedded-sdmmc"]
with-fan-layer = ["embedded-hal-1"]
with-fan-extra-1 = ["embedded-hal-1"]
with-laser = ["embedded-hal-1"]
with-trinamic = ["tmc2209"]
with-ps-on = []
with-spi = []
with-i2c = ["pwm-pca9685"]

with-display = []

with-x-axis = []
with-y-axis = []
with-z-axis = []
with-e-axis = []
with-a-axis = []
with-b-axis = []
with-c-axis = []
with-i-axis = []
with-j-axis = []
with-k-axis = []
with-u-axis = []
with-v-axis = []
with-w-axis = []

debug-motion-broadcast = []

nightly = ["embassy-executor/nightly"]
executor-interrupt = []
verbose-timings = []
sd-card-uses-spi = []
without-vref-int = []

fixed-point-128-impl = ["printhor-hwa-common/fixed-point-128-impl", "rust_decimal", "rust_decimal_macros"]
float-point-f32-impl = ["printhor-hwa-common/float-point-f32-impl"]
float-point-f64-impl = ["printhor-hwa-common/float-point-f64-impl"]

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = ["arch-std", "executor-thread", "task-arena-size-32768"] }
embassy-sync = { version = "0.6", features = ["std"] }
embassy-time = { version = "0.4", features = ["std", "generic-queue-64"] }
embassy-futures = { version = "0.1", features = [] }
#embassy-embedded-hal = { version = "0.3", features = [] }

embedded-io-async = { version = "0.6", optional = true }
embedded-io = { version = "0.6", optional = true }

async-std = { version = "1", optional = true}
sysinfo = { version = "0", default-features = false, features = ["default"]}
gnuplot = {version = "0.0", default-features = false, features=[], optional = true}
env_logger = { version = "0.11", optional = true }
printhor-hwa-common = { version = "0.0", default-features = false, features = ["std"], path = "../../printhor-hwa-common"}
printhor-hwa-utils = { version = "0.0", default-features = false, features = ["std"], path = "../../printhor-hwa-utils"}
async-gcode = {version = "0", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value", "std"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0", default-features = false, optional = true }
embedded-hal-0 = { package = "embedded-hal", version = "0.2", features = ["unproven" ], optional = true }
futures = { version = "0.3", default-features = false, features = [] }
embedded-sdmmc = { version = "0.8", default-features = false, optional = true }

pwm-pca9685 = { version = "1.0.0", default-features = false, optional = true}

#lvgl = { version="0", default-features = false, features =[], optional = true }
nb = {version = "1.1", default-features = false, features = []}
tmc2209 = { version = "0.2", optional = true }
thread-priority = { version = "1.1"}

rust_decimal = { optional = true, version = "1", default-features = false, features = ["maths", "serde-with-str"] }
rust_decimal_macros = { optional = true, version = "1" }

cfg-if = {version = "1.0"}
const_env = { version = "0.1" }

[patch.crates-io]
printhor-hwa-common = { path = "../../printhor-hwa-common" }
printhor-hwa-utils = { path = "../../printhor-hwa-utils" }
embassy-executor = { path = "../../libs/embassy/embassy-executor" }
embassy-sync = { path = "../../libs/embassy/embassy-sync" }
embassy-time = { path = "../../libs/embassy/embassy-time" }
embassy-futures = { path = "../../libs/embassy/embassy-futures" }
embassy-embedded-hal = { path = "../../libs/embassy/embassy-embedded-hal" }
async-gcode = { path = "../../libs/async-gcode" }
