[package]
name = "printhor-hwi_nucleo_64_arduino_cnc_hat"
version = "0.0.4"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for STM32 Nucleo-64 with Arduino CNC Hat V3.x"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstraction"]
license = "MIT"
documentation = "https://docs.rs/printhor-hwi_nucleo_64_arduino_cnc_hat"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
#default = ["nucleo64-l476rg", "with-motion", "printhor-hwa-common/with-motion", "printhor-hwa-common/with-x-axis", "with-serial-port-1", "float-point-f32-impl"]
default = ["nucleo64-f410rb", "with-motion", "with-i2c", "printhor-hwa-common/with-i2c", "printhor-hwa-common/with-motion", "with-x-axis", "with-serial-port-1", "float-point-f32-impl"]
# Board kind
nucleo64-l476rg = ["embassy-time/tick-hz-1_000_000", "embassy-executor/task-arena-size-8192", "embassy-stm32/stm32l476rg", "embassy-stm32/time-driver-tim5"]
nucleo64-f410rb = ["embassy-time/tick-hz-1_000_000", "embassy-executor/task-arena-size-8192", "embassy-stm32/stm32f410rb", "embassy-stm32/time-driver-tim9"]
# Hardware device features
with-serial-usb = ["embassy-usb"]
with-print-job = []
with-serial-port-1 = ["embedded-io-async", "printhor-hwa-common/with-serial-port-1"]
with-serial-port-2 = ["embedded-io-async", "printhor-hwa-common/with-serial-port-2"]
with-spi = ["embedded-hal-1"]
with-i2c = ["embedded-hal-1", "pwm-pca9685/async"]
with-hot-end = ["embedded-hal-1"]
with-hot-bed = ["embedded-hal-1"]
with-motion = ["printhor-hwa-common/with-motion"]
with-motion-stepper = []
with-motion-cartessian-kinematics = ["printhor-hwa-common/with-motion-cartessian-kinematics"]
with-motion-anthropomorphic-kinematics = ["printhor-hwa-common/with-motion-anthropomorphic-kinematics"]
with-motion-delta-kinematics = ["printhor-hwa-common/with-motion-delta-kinematics"]
with-motion-broadcast = []
with-probe = ["embedded-hal-1"]
with-endstops = []
with-sd-card = []
with-fan-layer = ["embedded-hal-1"]
with-fan-extra-1 = []
with-laser = ["embedded-hal-1"]
with-defmt = ["defmt", "printhor-hwa-common/with-defmt", "printhor-hwa-common/with-defmt", "printhor-hwa-utils/with-defmt", "embassy-stm32/defmt", "embassy-executor/defmt"]
with-trinamic = []
with-ps-on = []
uart-uses-ring-buffer = []

with-e-axis = ["printhor-hwa-common/with-e-axis"]
with-x-axis = ["printhor-hwa-common/with-x-axis"]
with-y-axis = ["printhor-hwa-common/with-y-axis"]
with-z-axis = ["printhor-hwa-common/with-z-axis"]
with-a-axis = ["printhor-hwa-common/with-a-axis"]
with-b-axis = ["printhor-hwa-common/with-b-axis"]
with-c-axis = ["printhor-hwa-common/with-c-axis"]
with-i-axis = ["printhor-hwa-common/with-i-axis"]
with-j-axis = ["printhor-hwa-common/with-j-axis"]
with-k-axis = ["printhor-hwa-common/with-k-axis"]
with-u-axis = ["printhor-hwa-common/with-u-axis"]
with-v-axis = ["printhor-hwa-common/with-v-axis"]
with-w-axis = ["printhor-hwa-common/with-w-axis"]

debug-signals = []

nightly = []
cooperative = ["embassy-time/generic-queue-64"]
verbose-timings = []
sd-card-uses-spi = []
ili9341_parallel = []
ili9341_spi = ["with-spi"]

fixed-point-128-impl = ["printhor-hwa-common/fixed-point-128-impl", "rust_decimal", "rust_decimal_macros"]
float-point-f32-impl = ["printhor-hwa-common/float-point-f32-impl"]
float-point-f64-impl = ["printhor-hwa-common/float-point-f64-impl"]

[dependencies]
defmt = { version = "0.3", default-features = false, optional = true }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", default-features = false }
alloc-cortex-m = { version = "0.4", default-features = false, features = [] }

embassy-stm32 = { version = "0.2", default-features = false, features = ["rt", "memory-x", "exti", "unstable-pac"] }
embassy-executor = { version = "0.7", default-features = false, features = ["arch-cortex-m", "executor-interrupt"] }
embassy-sync = { version = "0.6", features = [] }
embassy-time = { version = "0.4", features = [] }
embassy-futures = { version = "0.1", features = [] }
embassy-usb = { version = "0", features = [], optional = true }

printhor-hwa-common = { version = "0.0", default-features = false, features = [], path = "../../printhor-hwa-common" }
printhor-hwa-utils = { version = "0.0", default-features = false, features = [], path = "../../printhor-hwa-utils" }
async-gcode = {version = "0", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"] }
futures = { version = "0.3", default-features = false, features = [] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0", default-features = false, optional = true, features = [] }
embedded-hal-0 = { package = "embedded-hal", version = "0.2", features = ["unproven", ] }
embedded-io-async = { version = "0.6", default-features = false, optional = true, features = [] }

pwm-pca9685 = { version = "1.0.0", default-features = false, optional = true}


cfg-if = { version = "1.0" }
const_env = { version = "0.1" }
pin-project = "1.1"

rust_decimal = { optional = true, version = "1", default-features = false, features = ["maths", "serde-with-str"] }
rust_decimal_macros = { optional = true, version = "1" }

[patch.crates-io]
async-gcode = { path = "../../libs/async-gcode" }
embassy-stm32 = { path = "../../libs/embassy/embassy-stm32" }
embassy-executor = { path = "../../libs/embassy/embassy-executor" }
embassy-sync = { path = "../../libs/embassy/embassy-sync" }
embassy-time = { path = "../../libs/embassy/embassy-time" }
embassy-futures = { path = "../../libs/embassy/embassy-futures" }
embassy-usb = { path = "../../libs/embassy/embassy-usb" }
